--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,22 @@
 @tailwind base;
 
+body {
+  background: radial-gradient(33.07% 38.72% at 100% 15.32%, #400B3B 0%, rgba(25, 7, 31, 0.88) 11.21%, rgba(29, 4, 45, 0.92) 59.13%, #0D0D0E 100%);
+
+}
+
+@media only screen and (max-width: 900px) {
+  body {
+    background: radial-gradient(33.07% 38.72% at 100% 5%, #400B3B 0%, rgba(25, 7, 31, 0.88) 11.21%, rgba(29, 4, 45, 0.92) 59.13%, #0D0D0E 100%);
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  body {
+    background: radial-gradient(33.07% 20.72% at 100% 2%, #400B3B 0%, rgba(25, 7, 31, 0.88) 11.21%, rgba(29, 4, 45, 0.92) 59.13%, #0D0D0E 100%);
+  }
+}
+
 a {
   @apply text-blue-700;
 }
